[package]
name = "thruster-cli"
version = "0.1.2"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A cli for thruster, the rust web framework."
readme = "README.md"
license = "MIT"
documentation = "https://github.com/trezm/thruster-cli"
homepage = "https://github.com/trezm/thruster-cli"
repository = "https://github.com/trezm/thruster-cli"


[dependencies]
chrono = "0.4"
regex = { version = "0.2.5", features = ["pattern"] }
rand = "0.4"
fuel_line = "0.1"
fuel_line_derive = "0.1"
