[package]
name = "thruster-cli"
version = "0.7.5"
authors = ["Pete Mertz <peter.s.mertz@gmail.com>"]
description = "A cli for thruster, the rust web framework."
readme = "README.md"
license = "MIT"
documentation = "https://github.com/trezm/thruster-cli"
homepage = "https://github.com/trezm/thruster-cli"
repository = "https://github.com/trezm/thruster-cli"
edition = "2018"

[dependencies]
chrono = "0.4"
regex = { version = "0.2.5" }
rand = "0.4"
fuel_line = "0.1.2"
fuel_line_derive = "0.1.2"
